--- a/views/edit_supplier.hbs
+++ b/views/edit_supplier.hbs
@@ -20,16 +20,16 @@
         <div class="form-row">
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="name">NAME</label>
+                    <label for="name">Nom</label>
                     <input type="text" class="form-control" id="name" name="name" aria-describedby="name"
-                        placeholder="Supplier name" value="{{name}}">
+                        placeholder="Nom du fournisseur" value="{{name}}">
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="phone_number">PHONE NUMBER</label>
+                    <label for="phone_number">Téléphone</label>
                     <input type="text" class="form-control" id="phone_number" name="phone_number"
-                        aria-describedby="phone_number" placeholder="phone number" value="{{phone_number}}">
+                        aria-describedby="phone_number" placeholder="Téléphone" value="{{phone_number}}">
                 </div>
             </div>
         </div>
@@ -37,23 +37,23 @@
         <div class="form-row">
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="product_name">PRODUCT NAME</label>
+                    <label for="product_name">Nom du produit</label>
                     <input type="text" class="form-control" id="product_name" name="product_name"
                         placeholder="product_name" value="{{product_name}}">
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="category">CATEGORY</label>
-                    <input type="text" class="form-control" id="category" name="category" placeholder="category"
+                    <label for="category">Catégorie</label>
+                    <input type="text" class="form-control" id="category" name="category" placeholder="Catégorie"
                         value={{category}}>
                 </div>
             </div>
 
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="price">PRICE</label>
-                    <input type="number" class="form-control" id="price" name="price" placeholder="price"
+                    <label for="price">Prix</label>
+                    <input type="number" class="form-control" id="price" name="price" placeholder="Prix"
                         value={{price}}>
                 </div>
             </div>
