--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -21,13 +21,13 @@
     <table id="basic-data-table" class="table nowrap">
         <thead class="thead thead-light">
             <tr>
-                <th>NAME</th>
-                <th>CATEGORY</th>
-                <th>PRICE/FRS</th>
-                <th>QUANTITY</th>
+                <th>Nom</th>
+                <th>Catégorie</th>
+                <th>Prix/FRS</th>
+                <th>Quantité</th>
                 <th>TOTAL</th>
-                <th>DATE</th>
-                <th>TIME</th>
+                <th>Date</th>
+                <th>Heure</th>
                 <th>UPDATE</th>
                 <th>DELETE</th>
 
