--- a/views/create_order.hbs
+++ b/views/create_order.hbs
@@ -58,13 +58,13 @@
             <div class="col-12 col-md-6">
                 <div class="form-group">
                     <label for="date">Date</label>
-                    <input type="date" class="form-control" id="date" placeholder="date" name="date">
+                    <input type="date" class="form-control" id="date" placeholder="Date" name="date">
                 </div>
             </div>
             <div class="col-12 col-md-6">
                 <div class="form-group">
                     <label for="time">Temps</label>
-                    <input type="time" class="form-control" id="time" placeholder="time" name="Heure">
+                    <input type="time" class="form-control" id="time" placeholder="Heure" name="Heure">
                 </div>
             </div>
         </div>
