--- a/views/create_product.hbs
+++ b/views/create_product.hbs
@@ -17,16 +17,16 @@
         <div class="form-row">
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="name">PRODUCT NAME</label>
+                    <label for="name">Nom du produit</label>
                     <input type="text" class="form-control" id="name" name="name" aria-describedby="name"
-                        placeholder="product name">
+                        placeholder="Nom du produit">
                 </div>
             </div>
 
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="category">CATEGORY</label>
-                    <input type="text" class="form-control" id="category" name="category" placeholder="category">
+                    <label for="category">Catégorie</label>
+                    <input type="text" class="form-control" id="category" name="category" placeholder="Catégorie">
                 </div>
             </div>
         </div>
@@ -34,22 +34,22 @@
         <div class="form-row">
             <div class="col-12 col-md-4">
                 <div class="form-group">
-                    <label for="price">UNIT PRICE</label>
-                    <input type="number" class="form-control" id="price" name="price" placeholder="price">
+                    <label for="price">Prix Unitaire</label>
+                    <input type="number" class="form-control" id="price" name="price" placeholder="Prix">
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
                 <div class="form-group">
-                    <label for="quantity">QUANTITY</label>
-                    <input type="number" class="form-control" id="quantity" name="quantity" placeholder="quantity">
+                    <label for="quantity">Quantité</label>
+                    <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Quantité">
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
                 <div class="form-group">
-                    <label for="supplier">SUPPLIER</label>
-                    <input type="text" class="form-control" id="supplier" name="supplier" placeholder="supplier">
+                    <label for="supplier">Fournisseur</label>
+                    <input type="text" class="form-control" id="supplier" name="supplier" placeholder="Fournisseur">
                 </div>
             </div>
         </div>
@@ -57,21 +57,21 @@
         <div class="form-row">
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="date">DATE</label>
-                    <input type="date" class="form-control" id="date" placeholder="date" name="date">
+                    <label for="date">Date</label>
+                    <input type="date" class="form-control" id="date" placeholder="Date" name="date">
                 </div>
             </div>
 
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="time">TIME</label>
-                    <input type="time" class="form-control" id="time" placeholder="time" name="time">
+                    <label for="time">Heure</label>
+                    <input type="time" class="form-control" id="time" placeholder="Heure" name="time">
                 </div>
             </div>
         </div>
 
         <button type="submit" class="btn btn-primary d-block w-25 mx-auto">
-            save
+            Enregistrer
         </button>
     </form>
 </div>
