--- a/views/edit_product.hbs
+++ b/views/edit_product.hbs
@@ -21,16 +21,16 @@
         <div class="form-row">
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="name">PRODUCT NAME</label>
+                    <label for="name">Nom du produit</label>
                     <input type="text" class="form-control" id="name" name="name" aria-describedby="name"
-                        placeholder="product name" value={{name}}>
+                        placeholder="Nom du produit" value={{name}}>
                 </div>
             </div>
 
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="category">CATEGORY</label>
-                    <input type="text" class="form-control" id="category" name="category" placeholder="category"
+                    <label for="category">Catégorie</label>
+                    <input type="text" class="form-control" id="category" name="category" placeholder="Catégorie"
                         value="{{category}}">
                 </div>
             </div>
@@ -39,24 +39,24 @@
         <div class="form-row">
             <div class="col-12 col-md-4">
                 <div class="form-group">
-                    <label for="price">UNIT PRICE</label>
-                    <input type="number" class="form-control" id="price" name="price" placeholder="price"
+                    <label for="price">Prix Unitaire</label>
+                    <input type="number" class="form-control" id="price" name="price" placeholder="Prix"
                         value="{{price}}">
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
                 <div class="form-group">
-                    <label for="quantity">QUANTITY</label>
-                    <input type="number" class="form-control" id="quantity" name="quantity" placeholder="quantity"
+                    <label for="quantity">Quantité</label>
+                    <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Quantité"
                         value="{{quantity}}">
                 </div>
             </div>
 
             <div class="col-12 col-md-4">
                 <div class="form-group">
-                    <label for="supplier">SUPPLIER</label>
-                    <input type="text" class="form-control" id="supplier" name="supplier" placeholder="supplier"
+                    <label for="supplier">Fournisseur</label>
+                    <input type="text" class="form-control" id="supplier" name="supplier" placeholder="Fournisseur"
                         value={{supplier}}>
                 </div>
             </div>
@@ -65,15 +65,15 @@
         <div class="form-row">
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="date">DATE</label>
-                    <input type="date" class="form-control" id="date" placeholder="date" name="date">
+                    <label for="date">Date</label>
+                    <input type="date" class="form-control" id="date" placeholder="Date" name="date">
                 </div>
             </div>
 
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="time">TIME</label>
-                    <input type="time" class="form-control" id="time" placeholder="time" name="time">
+                    <label for="time">Heure</label>
+                    <input type="time" class="form-control" id="time" placeholder="Heure" name="time">
                 </div>
             </div>
         </div>
