--- a/views/error.hbs
+++ b/views/error.hbs
@@ -34,8 +34,8 @@
 </div>
 
 <div class="copyright pl-0">
-    <p class="text-center">&copy; 2018 Copyright Sleek Dashboard Bootstrap Template by
-        <a class="text-primary" href="http://www.iamabdus.com/" target="_blank">Abdus</a>.
+    <p class="text-center">&copy; 2023 Copyright by
+        <a class="text-primary" href="https://www.linkedin.com/in/mahasedra/" target="_blank">Mahasedra</a>.
     </p>
 </div>
 </div>
