--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -86,46 +86,46 @@
             <li class="has-sub active">
               <a class="sidenav-item-link" href="/home" aria-expanded="false" aria-controls="app">
                 <i class="mdi mdi-home"></i>
-                <span class="nav-text">Home</span> <b class="caret"></b>
+                <span class="nav-text">Accueil</span> <b class="caret"></b>
               </a>
             </li>
 
             <li class="has-sub">
               <a class="sidenav-item-link" href="/create_order" aria-expanded="false" aria-controls="app">
                 <i class="mdi mdi-pencil-box-multiple"></i>
-                <span class="nav-text">New Order</span> <b class="caret"></b>
+                <span class="nav-text">Nouvelle commande</span> <b class="caret"></b>
               </a>
             </li>
 
             <li class="has-sub">
               <a class="sidenav-item-link" href="/create_product" aria-expanded="false" aria-controls="app">
                 <i class="mdi mdi-package-variant-closed"></i>
-                <span class="nav-text">New Product</span> <b class="caret"></b>
+                <span class="nav-text">Nouveau produit</span> <b class="caret"></b>
               </a>
             </li>
 
             <li class="has-sub">
               <a class="sidenav-item-link" href="/products" aria-expanded="false" aria-controls="app">
                 <i class="mdi mdi-basket"></i>
-                <span class="nav-text">Products</span> <b class="caret"></b>
+                <span class="nav-text">Produits</span> <b class="caret"></b>
               </a>
             </li>
             <li class="has-sub">
               <a class="sidenav-item-link" href="/orders" aria-expanded="false" aria-controls="app">
                 <i class="mdi mdi-cart"></i>
-                <span class="nav-text">Orders</span> <b class="caret"></b>
+                <span class="nav-text">Commandes</span> <b class="caret"></b>
               </a>
             </li>
             <li class="has-sub">
               <a class="sidenav-item-link" href="/reports" aria-expanded="false" aria-controls="app">
                 <i class="mdi mdi-book"></i>
-                <span class="nav-text">Reports</span> <b class="caret"></b>
+                <span class="nav-text">Rapports</span> <b class="caret"></b>
               </a>
             </li>
             <li class="has-sub">
               <a class="sidenav-item-link" href="/suppliers" aria-expanded="false" aria-controls="app">
                 <i class="mdi mdi-truck"></i>
-                <span class="nav-text">Suppliers</span> <b class="caret"></b>
+                <span class="nav-text">Fournisseurs</span> <b class="caret"></b>
               </a>
             </li>
 
@@ -142,7 +142,7 @@
         <nav class="navbar navbar-static-top navbar-expand-lg">
           <!-- Sidebar toggle button -->
           <button id="sidebar-toggler" class="sidebar-toggle">
-            <span class="sr-only">Toggle navigation</span>
+            <span class="sr-only">Basculer la navigation</span>
           </button>
           <!-- search form -->
           <div class="search-form d-none d-lg-inline-block">
@@ -167,44 +167,44 @@
                   <i class="mdi mdi-bell-outline"></i>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-right">
-                  <li class="dropdown-header">You have 5 notifications</li>
+                  <li class="dropdown-header">Vous avez 5 notifications</li>
                   <li>
                     <a href="#">
-                      <i class="mdi mdi-account-plus"></i> New user registered
+                      <i class="mdi mdi-account-plus"></i> Nouveau utilisateur enregistré
                       <span class=" font-size-12 d-inline-block float-right"><i class="mdi mdi-clock-outline"></i> 10
                         AM</span>
                     </a>
                   </li>
                   <li>
                     <a href="#">
-                      <i class="mdi mdi-account-remove"></i> User deleted
+                      <i class="mdi mdi-account-remove"></i> Utilisateur supprimé
                       <span class=" font-size-12 d-inline-block float-right"><i class="mdi mdi-clock-outline"></i> 07
                         AM</span>
                     </a>
                   </li>
                   <li>
                     <a href="#">
-                      <i class="mdi mdi-chart-areaspline"></i> Sales report is ready
+                      <i class="mdi mdi-chart-areaspline"></i> Rapport prêt
                       <span class=" font-size-12 d-inline-block float-right"><i class="mdi mdi-clock-outline"></i> 12
                         PM</span>
                     </a>
                   </li>
                   <li>
                     <a href="#">
-                      <i class="mdi mdi-account-supervisor"></i> New client
+                      <i class="mdi mdi-account-supervisor"></i> Nouveau client
                       <span class=" font-size-12 d-inline-block float-right"><i class="mdi mdi-clock-outline"></i> 10
                         AM</span>
                     </a>
                   </li>
                   <li>
                     <a href="#">
-                      <i class="mdi mdi-server-network-off"></i> Server overloaded
+                      <i class="mdi mdi-server-network-off"></i> Serveur surchargé
                       <span class=" font-size-12 d-inline-block float-right"><i class="mdi mdi-clock-outline"></i> 05
                         AM</span>
                     </a>
                   </li>
                   <li class="dropdown-footer">
-                    <a class="text-center" href="#"> View All </a>
+                    <a class="text-center" href="#"> Tous voir </a>
                   </li>
                 </ul>
               </li>
@@ -228,7 +228,7 @@
 
                   <li>
                     <a href="user-profile.html">
-                      <i class="mdi mdi-account"></i> My Profile
+                      <i class="mdi mdi-account"></i> Mon Profil
                     </a>
                   </li>
                   <li>
@@ -240,7 +240,7 @@
                     <a href="#"> <i class="mdi mdi-diamond-stone"></i> Projects </a>
                   </li>
                   <li class="right-sidebar-in">
-                    <a href="javascript:0"> <i class="mdi mdi-settings"></i> Setting </a>
+                    <a href="javascript:0"> <i class="mdi mdi-settings"></i> Paramètres </a>
                   </li>
 
                   <li class="dropdown-footer">
@@ -329,8 +329,8 @@
       <footer class="footer mt-auto">
         <div class="copyright bg-white">
           <p>
-            &copy; <span id="copy-year">2019</span> Copyright Sleek Dashboard Bootstrap Template by
-            <a class="text-primary" href="http://www.iamabdus.com/" target="_blank">Abdus</a>.
+            &copy; <span id="copy-year">2019</span> Copyright App by
+            <a class="text-primary" href="https://www.linkedin.com/in/mahasedra/" target="_blank">Mahasedra</a>.
           </p>
         </div>
         <script>
