--- a/views/login.hbs
+++ b/views/login.hbs
@@ -91,7 +91,7 @@
                             <div class="col-md-12">
                                 <div class="d-flex my-2 justify-content-between">
                                 </div>
-                                <button type="submit" class="btn btn-lg btn-primary btn-block mb-4">Log in</button>
+                                <button type="submit" class="btn btn-lg btn-primary btn-block mb-4">Se connecter</button>
                             </div>
                         </div>
                     </form>
@@ -104,7 +104,7 @@
             <div class="modal-dialog  modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title font-weight-bold" id="info_modal">Login alert</h5>
+                        <h5 class="modal-title font-weight-bold" id="info_modal">Connexion alert</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -113,7 +113,7 @@
                         <p id="message"></p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Fernmer</button>
                     </div>
                 </div>
             </div>
@@ -125,10 +125,10 @@
             <div class="modal-dialog modal-dialog-centered border-0" role="document">
                 <div class="modal-content transparent">
                     <div class="spinner-border mx-auto text-white" style="width:5rem; height:5rem;" role="status">
-                        <span class="sr-only">Loading...</span>
+                        <span class="sr-only">Chargement...</span>
                     </div>
 
-                    <h3 class="text-center text-white my-5" id="loading_message"> Verifying details. Please be patient
+                    <h3 class="text-center text-white my-5" id="loading_message"> Veuillez patienter
                     </h3>
                 </div>
             </div>
