--- a/views/suppliers.hbs
+++ b/views/suppliers.hbs
@@ -43,13 +43,13 @@
                 <td>
                     <form class="form" method="post" action="/findSId">
                         <input type="hidden" name="id" value="{{id}}"><button
-                            class="btn btn-sm d-block w-100 btn-secondary">edit</button>
+                            class="btn btn-sm d-block w-100 btn-secondary">Modifier</button>
                     </form>
                 </td>
                 <td>
                     <form class="form" method="post" action="/delete_supplier">
                         <input type="hidden" name="id" value="{{id}}"><button
-                            class="btn btn-sm d-block w-100 btn-danger">delete</button>
+                            class="btn btn-sm d-block w-100 btn-danger">Supprimer</button>
                     </form>
                 </td>
             </tr>
