--- a/views/create_order.hbs
+++ b/views/create_order.hbs
@@ -9,7 +9,6 @@
     </div>
     <a class="btn btn-primary mx-3" href="/orders">Tous les commandes</a>
     {{/if}}
-
     {{#if data}}
     <h2 class="mb-5">Nouvelle commande</h2>
 
@@ -20,8 +19,13 @@
             <div class="col-12 col-md-6">
                 <div class="form-group">
                     <label for="name">Nom du produit</label>
-                    <input type="text" class="form-control" id="name" name="name" aria-describedby="name"
+                    <select type="text" class="form-control" id="name" name="name" aria-describedby="name"
                         placeholder="Nom du produit">
+                        <option></option>
+                        {{#each data}}
+                        <option value="{{name}}">{{name}}</option>
+                        {{/each}}
+                    </select>
                 </div>
             </div>
 
@@ -63,14 +67,14 @@
             </div>
             <div class="col-12 col-md-6">
                 <div class="form-group">
-                    <label for="time">Temps</label>
-                    <input type="time" class="form-control" id="time" placeholder="Heure" name="Heure">
+                    <label for="time">Heure</label>
+                    <input type="time" class="form-control" id="time" placeholder="Heure" name="time">
                 </div>
             </div>
         </div>
 
         <button type="submit" class="btn btn-primary d-block w-25 mx-auto">
-            save
+            Enregistrer
         </button>
     </form>
 </div>
