--- a/views/create_supplier.hbs
+++ b/views/create_supplier.hbs
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary d-block w-50 mx-auto">Save</button>
+        <button type="submit" class="btn btn-primary d-block w-50 mx-auto">Enregistrer</button>
     </form>
 </div>
 
