--- a/views/edit_order.hbs
+++ b/views/edit_order.hbs
@@ -7,12 +7,12 @@
         </a>
     </div>
 
-    <a class="btn btn-primary mx-3" href="/orders">All orders</a>
+    <a class="btn btn-primary mx-3" href="/orders">Tous les commandes</a>
     {{/if}}
 
     {{#if data }}
     {{#each data}}
-    <h2 class="mb-5">Update Order : {{name}}</h2>
+    <h2 class="mb-5">Modification commande : {{name}}</h2>
     <form method="post" action="/update_order">
         <input type="hidden" class="form-control" value="{{id}}" id="id" name="id" readonly>
 
@@ -76,7 +76,7 @@
         {{/each}}
 
         <button type="submit" class="btn btn-primary d-block w-25 mx-auto">
-            update
+            Modifier
         </button>
     </form>
 </div>
