--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,7 @@
             <div class="card card-mini mb-4">
                 <div class="card-body">
                     <h2 class="mb-1">{{products}}</h2>
-                    <p>products</p>
+                    <p>Produits</p>
                     <div class="chartjs-wrapper">
                         <canvas id="barChart"></canvas>
                     </div>
@@ -19,7 +19,7 @@
             <div class="card card-mini mb-4">
                 <div class="card-body">
                     <h2 class="mb-1">{{orders}}</h2>
-                    <p>orders </p>
+                    <p>Commandes </p>
                     <div class="chartjs-wrapper">
                         <canvas id="area-chart"></canvas>
                     </div>
@@ -32,7 +32,7 @@
             <div class="card card-mini mb-4">
                 <div class="card-body">
                     <h2 class="mb-1">{{ best_seller}}</h2>
-                    <p>Best Selling</p>
+                    <p>Meilleure vente</p>
                     <div class="chartjs-wrapper">
                         <canvas id="line"></canvas>
                     </div>
@@ -47,7 +47,7 @@
             <!-- Sales Graph -->
             <div class="card card-default" data-scroll-height="675">
                 <div class="card-header">
-                    <h2>Summary</h2>
+                    <h2>Résumé</h2>
                 </div>
                 <div class="card-body">
                     <canvas id="linechart" class="chartjs"></canvas>
@@ -56,13 +56,7 @@
                     <div class="col-6 px-0">
                         <div class="text-center p-4">
                             <h4>750</h4>
-                            <p class="mt-2">Total orders of this year</p>
-                        </div>
-                    </div>
-                    <div class="col-6 px-0">
-                        <div class="text-center p-4 border-left">
-                            <h4>70,506 FCFA</h4>
-                            <p class="mt-2">Total revenue of this year</p>
+                            <p class="mt-2">Commandes total cette année</p>
                         </div>
                     </div>
                 </div>
