--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -6,15 +6,15 @@
             <span aria-hidden="true">&times;</span>
         </a>
     </div>
-    <a class="btn btn-primary mx-3" href="/orders">All Orders</a>
+    <a class="btn btn-primary mx-3" href="/orders">Tous les Commandes</a>
     {{/if}}
 
     {{#if data}}
     <div class="d-flex justify-content-between mb-4">
-        <h1>Orders</h1>
+        <h1>Commandes</h1>
 
         <a href="/create_order" class="btn btn-primary">
-            Add Order
+            Ajouter commande
         </a>
     </div>
 
@@ -28,8 +28,8 @@
                 <th>TOTAL</th>
                 <th>Date</th>
                 <th>Heure</th>
-                <th>UPDATE</th>
-                <th>DELETE</th>
+                <th>Modifier</th>
+                <th>Supprimer</th>
 
             </tr>
         </thead>
@@ -47,13 +47,13 @@
                 <td>
                     <form class="form" method="post" action="/findOId">
                         <input type="hidden" name="id" value="{{id}}"><button
-                            class="btn btn-sm d-block w-100 btn-secondary">edit</button>
+                            class="btn btn-sm d-block w-100 btn-secondary">Modifier</button>
                     </form>
                 </td>
                 <td>
                     <form class="form" method="post" action="/delete_order">
                         <input type="hidden" name="id" value="{{id}}"><button
-                            class="btn btn-sm d-block w-100 btn-danger">delete</button>
+                            class="btn btn-sm d-block w-100 btn-danger">Supprimer</button>
                     </form>
                 </td>
             </tr>
