--- a/views/register.hbs
+++ b/views/register.hbs
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="card-body p-5">
-                        <h4 class="text-dark mb-5">Sign Up</h4>
+                        <h4 class="text-dark mb-5">Inscription</h4>
                         <form action="/index.html">
                             <div class="row">
                                 <div class="form-group col-md-12 mb-4">
@@ -101,13 +101,14 @@
                                         <label class="control control-checkbox">
                                             <input type="checkbox" />
                                             <div class="control-indicator"></div>
-                                            I Agree the terms and conditions
+                                            J'accepte les termes et conditions
                                         </label>
 
                                     </div>
-                                    <button type="submit" class="btn btn-lg btn-primary btn-block mb-4">Sign Up</button>
-                                    <p>Already have an account?
-                                        <a class="text-blue" href="/">Log in</a>
+                                    <button type="submit"
+                                        class="btn btn-lg btn-primary btn-block mb-4">S'inscrire</button>
+                                    <p>Vous avez déjà un compte?
+                                        <a class="text-blue" href="/">Se connecter</a>
                                     </p>
                                 </div>
                             </div>
@@ -118,8 +119,9 @@
             </div>
         </div>
         <div class="copyright pl-0">
-            <p class="text-center">&copy; 2018 Copyright Sleek Dashboard Bootstrap Template by
-                <a class="text-primary" href="http://www.iamabdus.com/" target="_blank">Abdus</a>.
+            <p class="text-center">
+                &copy; <span id="copy-year">2019</span> Copyright App by
+                <a class="text-primary" href="https://www.linkedin.com/in/mahasedra/" target="_blank">Mahasedra</a>.
             </p>
         </div>
     </div>
