--- a/views/reports-orders.hbs
+++ b/views/reports-orders.hbs
@@ -1,5 +1,5 @@
 <div class="content bg-white">
-        <h2 class="mb-3 font-weight-bold text-center"> Orders Report</h2>
+        <h2 class="mb-3 font-weight-bold text-center"> Rapports de Commandes</h2>
 
         <table id="orders-report-table" class="display table table-bordered " style="width:100%">
 
