--- a/views/reports-product.hbs
+++ b/views/reports-product.hbs
@@ -1,5 +1,5 @@
 <div class="content bg-white">
-        <h2 class="mb-3 font-weight-bold text-center"> Product Report</h2>
+        <h2 class="mb-3 font-weight-bold text-center"> Rapport de produits</h2>
 
         <table id="products-report-table" class="display table table-bordered " style="width:100%">
                 <thead class="thead thead-light">
